<resources>
    <string name="app_name">Tasks</string>
    <string name="tasks">Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="communication_method">Communication Method</string>
    <string name="confirm_password">Confirm password</string>
    <string-array name="circles">
        <item>Android</item>
        <item>Back-End</item>
        <item>Data Science</item>
        <item>Embedded</item>
        <item>Front-End</item>
        <item>Graphic Design</item>
        <item>IOS</item>
        <item>Marketing</item>
        <item>Security</item>
    </string-array>
</resources>
